--- a/index.html
+++ b/index.html
@@ -85,9 +85,8 @@ body {
   <!-- ░░░░░░░WIERSZ Z PRZYCISKAMI PRZYPIĘTY░░░░░░ -->
 <table style="position:fixed; top:0; left:0; width:100%; z-index:9999; border-collapse:collapse; background:linear-gradient(90deg, #dde7f2, #cadbe9); box-shadow:0 2px 10px rgba(0,0,0,0.1); font-family:'Segoe UI',sans-serif;">
   <tr>
-    <td style="width:30%; padding:8px; text-align:center; vertical-align:middle; border:1px solid #aebdc9; color:#101820; text-shadow:0 1px 1px rgba(255,255,255,0.4); font-weight:bold;">
+    <td style="width:8%; padding:8px; text-align:center; vertical-align:middle; border:1px solid #aebdc9; color:#101820; text-shadow:0 1px 1px rgba(255,255,255,0.4); font-weight:bold;">
        <button id="reset-all" style="padding:6px 14px; border-radius:6px; background:#f39c12; color:white; border:none; font-weight:bold; box-shadow:0 2px 4px rgba(0,0,0,0.1);">RESET ALL</button>
-    
      </td>
    
     <td style="width:60%; padding:8px; text-align:center; vertical-align:middle; border:1px solid #aebdc9; color:#101820; text-shadow:0 1px 1px rgba(255,255,255,0.4); font-weight:bold;">
@@ -99,8 +98,20 @@ body {
   <span id="result-count" style="font-size:14px; min-width:36px; text-align:center;">0/0</span>
   <button onclick="clearHighlights()" style="padding:2px 8px; font-weight:bold; color:white; background:#e74c3c; border:none; border-radius:4px;">X</button>
 </div>    </td>
+
+    <td style="width:8%; padding:8px; text-align:center; vertical-align:middle; border:1px solid #aebdc9; color:#101820; text-shadow:0 1px 1px rgba(255,255,255,0.4); font-weight:bold;">
+       miejsce na eksport kopiuj
+     </td>
+
+    <td style="width:8%; padding:8px; text-align:center; vertical-align:middle; border:1px solid #aebdc9; color:#101820; text-shadow:0 1px 1px rgba(255,255,255,0.4); font-weight:bold;">
+     miejsce na eksport z pliku
+     </td>
+
+    <td style="width:8%; padding:8px; text-align:center; vertical-align:middle; border:1px solid #aebdc9; color:#101820; text-shadow:0 1px 1px rgba(255,255,255,0.4); font-weight:bold;">
+      miejsce na import
+     </td>
     
-    <td style="width:10%; padding:8px; text-align:center; vertical-align:middle; border:1px solid #aebdc9; color:#101820; text-shadow:0 1px 1px rgba(255,255,255,0.4); font-weight:bold;">
+    <td style="width:8%; padding:8px; text-align:center; vertical-align:middle; border:1px solid #aebdc9; color:#101820; text-shadow:0 1px 1px rgba(255,255,255,0.4); font-weight:bold;">
        <button onclick="logout()" style="padding:6px 14px; border-radius:6px; background:#c0392b; color:white; border:none; font-weight:bold; box-shadow:0 2px 4px rgba(0,0,0,0.1);">Wyloguj</button>
 
   </tr>
@@ -109,7 +120,8 @@ body {
 
 
 
-
+<br>
+&nbsp;
 
   
  
