--- a/index.html
+++ b/index.html
@@ -81,41 +81,67 @@ body {
 
 <!-- ░░░░░░░░░░░░░░░░░░░░TU ZACZYNA SIĘ TO CO BĘDZIE WIDOCZNE NA STRONIE░░░░░░░░░░░░░░░░░░░░ -->
 
-
-  <!-- ░░░░░░░WIERSZ Z PRZYCISKAMI PRZYPIĘTY░░░░░░ -->
+<!-- ░░░░░░░WIERSZ Z PRZYCISKAMI PRZYPIĘTY░░░░░░ -->
 <table style="position:fixed; top:0; left:0; width:100%; z-index:9999; border-collapse:collapse; background:linear-gradient(90deg, #dde7f2, #cadbe9); box-shadow:0 2px 10px rgba(0,0,0,0.1); font-family:'Segoe UI',sans-serif;">
   <tr>
-    <td style="width:8%; padding:8px; text-align:center; vertical-align:middle; border:1px solid #aebdc9; color:#101820; text-shadow:0 1px 1px rgba(255,255,255,0.4); font-weight:bold;">
-       <button id="reset-all" style="padding:6px 14px; border-radius:6px; background:#f39c12; color:white; border:none; font-weight:bold; box-shadow:0 2px 4px rgba(0,0,0,0.1);">RESET ALL</button>
-     </td>
-   
-    <td style="width:60%; padding:8px; text-align:center; vertical-align:middle; border:1px solid #aebdc9; color:#101820; text-shadow:0 1px 1px rgba(255,255,255,0.4); font-weight:bold;">
-            <div id="search-box" style="position:fixed; top:60px; left:50%; transform:translateX(-50%); background:#dde7f2; padding:6px 12px; border-radius:8px; box-shadow:0 2px 8px rgba(0,0,0,0.15); z-index:9999; display:flex; align-items:center; gap:6px; font-family:'Segoe UI', sans-serif;">
-  <input id="search-input" type="text" placeholder="Szukaj..." style="padding:6px 10px; border:1px solid #ccc; border-radius:6px; font-size:14px; width:180px;">
-  <button onclick="searchHighlight()" style="padding:4px 8px; font-size:16px;">🔍</button>
-  <button onclick="prevMatch()" style="padding:4px 8px;">⬅️</button>
-  <button onclick="nextMatch()" style="padding:4px 8px;">➡️</button>
-  <span id="result-count" style="font-size:14px; min-width:36px; text-align:center;">0/0</span>
-  <button onclick="clearHighlights()" style="padding:2px 8px; font-weight:bold; color:white; background:#e74c3c; border:none; border-radius:4px;">X</button>
-</div>    </td>
 
-    <td style="width:8%; padding:8px; text-align:center; vertical-align:middle; border:1px solid #aebdc9; color:#101820; text-shadow:0 1px 1px rgba(255,255,255,0.4); font-weight:bold;">
-       miejsce na eksport kopiuj
-     </td>
+    <!-- RESET -->
+    <td style="width:8%; padding:6px; text-align:center; vertical-align:middle; border:1px solid #aebdc9;">
+      <button id="reset-all" style="padding:6px 12px; border-radius:6px; background:#f39c12; color:white; border:none; font-weight:bold; box-shadow:0 2px 4px rgba(0,0,0,0.1);">RESET ALL</button>
+    </td>
 
-    <td style="width:8%; padding:8px; text-align:center; vertical-align:middle; border:1px solid #aebdc9; color:#101820; text-shadow:0 1px 1px rgba(255,255,255,0.4); font-weight:bold;">
-     miejsce na eksport z pliku
-     </td>
+    <!-- WYSZUKIWARKA -->
+    <td style="width:60%; padding:6px; text-align:center; vertical-align:middle; border:1px solid #aebdc9;">
+      <div id="search-box" style="position:fixed; top:60px; left:50%; transform:translateX(-50%); background:#dde7f2; padding:6px 12px; border-radius:8px; box-shadow:0 2px 8px rgba(0,0,0,0.15); z-index:9999; display:flex; align-items:center; gap:6px;">
+        <input id="search-input" type="text" placeholder="Szukaj..." style="padding:6px 10px; border:1px solid #ccc; border-radius:6px; font-size:14px; width:180px;">
+        <button onclick="searchHighlight()" style="padding:4px 8px;">🔍</button>
+        <button onclick="prevMatch()" style="padding:4px 8px;">⬅️</button>
+        <button onclick="nextMatch()" style="padding:4px 8px;">➡️</button>
+        <span id="result-count" style="font-size:14px; min-width:36px; text-align:center;">0/0</span>
+        <button onclick="clearHighlights()" style="padding:2px 8px; font-weight:bold; color:white; background:#e74c3c; border:none; border-radius:4px;">X</button>
+      </div>
+    </td>
 
-    <td style="width:8%; padding:8px; text-align:center; vertical-align:middle; border:1px solid #aebdc9; color:#101820; text-shadow:0 1px 1px rgba(255,255,255,0.4); font-weight:bold;">
-      miejsce na import
-     </td>
-    
-    <td style="width:8%; padding:8px; text-align:center; vertical-align:middle; border:1px solid #aebdc9; color:#101820; text-shadow:0 1px 1px rgba(255,255,255,0.4); font-weight:bold;">
-       <button onclick="logout()" style="padding:6px 14px; border-radius:6px; background:#c0392b; color:white; border:none; font-weight:bold; box-shadow:0 2px 4px rgba(0,0,0,0.1);">Wyloguj</button>
+    <!-- EKSPORT KOPIOWANIE -->
+    <td style="width:8%; padding:6px; text-align:center; vertical-align:middle; border:1px solid #aebdc9;">
+      <div style="display:flex; align-items:center; gap:6px; background:#dde7f2; padding:6px 10px; border-radius:8px; box-shadow:0 2px 8px rgba(0,0,0,0.15);">
+        <textarea id="exportOutput" placeholder="..." style="height:28px; width:160px; font-size:13px; padding:4px 6px; border-radius:6px; border:1px solid #ccc; resize:none;"></textarea>
+        <button onclick="copyExportJSON()" style="padding:4px;">📋</button>
+        <button onclick="clearExportJSON()" style="padding:4px;">❌</button>
+        <button onclick="exportCheckCopy()" style="padding:4px;">☑️</button>
+        <button onclick="exportAllNotesCopy()" style="padding:4px;">📝</button>
+        <button onclick="exportAllCopy()" style="padding:4px;">📦</button>
+      </div>
+    </td>
+
+    <!-- EKSPORT DO PLIKU -->
+    <td style="width:8%; padding:6px; text-align:center; vertical-align:middle; border:1px solid #aebdc9;">
+      <div style="display:flex; align-items:center; gap:6px; background:#dde7f2; padding:6px 10px; border-radius:8px; box-shadow:0 2px 8px rgba(0,0,0,0.15);">
+        <input type="file" id="fileInputExport" style="font-size:13px;">
+        <button onclick="exportCheck()" style="padding:4px;">☑️</button>
+        <button onclick="exportAllNotes()" style="padding:4px;">📝</button>
+        <button onclick="exportAll()" style="padding:4px;">📦</button>
+      </div>
+    </td>
+
+    <!-- IMPORT Z PLIKU -->
+    <td style="width:8%; padding:6px; text-align:center; vertical-align:middle; border:1px solid #aebdc9;">
+      <div style="display:flex; align-items:center; gap:6px; background:#dde7f2; padding:6px 10px; border-radius:8px; box-shadow:0 2px 8px rgba(0,0,0,0.15);">
+        <input type="file" id="fileInput" style="font-size:13px;">
+        <button onclick="importFromFile('check')" style="padding:4px;">☑️</button>
+        <button onclick="importFromFile('notes-all')" style="padding:4px;">📝</button>
+        <button onclick="importFromFile('all')" style="padding:4px;">📦</button>
+      </div>
+    </td>
+
+    <!-- WYLOGUJ -->
+    <td style="width:8%; padding:6px; text-align:center; vertical-align:middle; border:1px solid #aebdc9;">
+      <button onclick="logout()" style="padding:6px 14px; border-radius:6px; background:#c0392b; color:white; border:none; font-weight:bold; box-shadow:0 2px 4px rgba(0,0,0,0.1);">Wyloguj</button>
+    </td>
 
   </tr>
 </table>
+
 
 
 
