--- a/index.html
+++ b/index.html
@@ -79,21 +79,19 @@ body {
 
   
 
-<!-- ░░░░░░░░░░░░░░░░░░░░TU ZACZYNA SIĘ TO CO BĘDZIE WIDOCZNE NA STRONIE░░░░░░░░░░░░░░░░░░░░ -->
-
 <!-- ░░░░░░░WIERSZ Z PRZYCISKAMI PRZYPIĘTY░░░░░░ -->
 <table style="position:fixed; top:0; left:0; width:100%; z-index:9999; border-collapse:collapse; background:linear-gradient(90deg, #dde7f2, #cadbe9); box-shadow:0 2px 10px rgba(0,0,0,0.1); font-family:'Segoe UI',sans-serif;">
   <tr>
 
     <!-- RESET -->
     <td style="width:8%; padding:6px; text-align:center; vertical-align:middle; border:1px solid #aebdc9;">
-      <button id="reset-all" style="padding:10px 18px; font-size:16px; border-radius:8px; background:#f39c12; color:white; border:none; font-weight:bold; box-shadow:0 2px 4px rgba(0,0,0,0.1);">RESET ALL</button>
+      <button id="reset-all" style="padding:12px 22px; font-size:17px; border-radius:8px; background:#f39c12; color:white; border:none; font-weight:bold; box-shadow:0 2px 4px rgba(0,0,0,0.1);">RESET ALL</button>
     </td>
 
     <!-- WYSZUKIWARKA -->
     <td style="width:60%; padding:6px; text-align:center; vertical-align:middle; border:1px solid #aebdc9;">
-      <div id="search-box" style="display:flex; justify-content:center; align-items:center; gap:8px;">
-        <input id="search-input" type="text" placeholder="Szukaj..." style="flex:1; max-width:320px; padding:8px 12px; border:1px solid #ccc; border-radius:6px; font-size:15px;">
+      <div style="display:flex; justify-content:center; align-items:center; gap:8px;">
+        <input id="search-input" type="text" placeholder="Szukaj..." style="flex:1; max-width:420px; padding:10px 14px; border:1px solid #ccc; border-radius:6px; font-size:15px;">
         <button onclick="searchHighlight()" style="padding:6px 10px;">🔍</button>
         <button onclick="prevMatch()" style="padding:6px 10px;">⬅️</button>
         <button onclick="nextMatch()" style="padding:6px 10px;">➡️</button>
@@ -150,6 +148,7 @@ body {
 
   </tr>
 </table>
+
 
 
 
