--- a/index.html
+++ b/index.html
@@ -80,24 +80,25 @@ body {
   
 
 <!-- ░░░░░░░░░░░░░░░░░░░░TU ZACZYNA SIĘ TO CO BĘDZIE WIDOCZNE NA STRONIE░░░░░░░░░░░░░░░░░░░░ -->
+<!-- 🔍 Pasek wyszukiwania + reset -->
 <table style="position:fixed; top:0; left:0; width:100%; z-index:9999; border-collapse:collapse; background:linear-gradient(90deg, #dde7f2, #cadbe9); box-shadow:0 2px 10px rgba(0,0,0,0.1); font-family:'Segoe UI',sans-serif;">
   <tr>
-    <!-- RESET -->
-    <td style="width:8%; padding:6px; text-align:center; vertical-align:middle; border:1px solid #aebdc9;">
-      <button id="reset-all" style="padding:10px 18px; font-size:16px; border-radius:8px; background:#f39c12; color:white; border:none; font-weight:bold; box-shadow:0 2px 4px rgba(0,0,0,0.1);">RESET ALL</button>
+    <td style="width:10%; padding:6px; text-align:center; border:1px solid #aebdc9;">
+      <button id="reset-all" style="padding:10px 18px; font-size:16px; border-radius:8px; background:#f39c12; color:white; border:none; font-weight:bold;">RESET ALL</button>
     </td>
-
-    <!-- WYSZUKIWARKA -->
-    <td style="width:60%; padding:6px; text-align:center; vertical-align:middle; border:1px solid #aebdc9;">
-      <div id="search-box" style="display:flex; justify-content:center; align-items:center; gap:8px;">
-        <input id="search-input" type="text" placeholder="Szukaj..." style="flex:1; max-width:500px; padding:10px 14px; border:1px solid #ccc; border-radius:6px; font-size:15px;">
-        <button onclick="searchHighlight()" style="padding:6px 10px;">🔍</button>
-        <button onclick="prevMatch()" style="padding:6px 10px;">⬅️</button>
-        <button onclick="nextMatch()" style="padding:6px 10px;">➡️</button>
-        <span id="result-count" style="font-size:15px; min-width:40px; text-align:center;">0/0</span>
+    <td style="width:90%; padding:6px; border:1px solid #aebdc9;">
+      <div id="search-box" style="display:flex; align-items:center; gap:8px;">
+        <input id="search-input" type="text" placeholder="Szukaj..." style="flex:1; max-width:500px; padding:8px 12px; border:1px solid #ccc; border-radius:6px; font-size:15px;">
+        <button onclick="searchHighlight()">🔍</button>
+        <button onclick="prevMatch()">⬅️</button>
+        <button onclick="nextMatch()">➡️</button>
+        <span id="result-count" style="min-width:40px; text-align:center;">0/0</span>
         <button onclick="clearHighlights()" style="padding:6px 10px; font-weight:bold; color:white; background:#e74c3c; border:none; border-radius:6px;">X</button>
       </div>
     </td>
+  </tr>
+</table>
+
     
 
     <!-- EKSPORT JSON -->
@@ -4063,61 +4064,88 @@ function importDataByType(type, data) {
 
   
 <script>
-let currentMatch = 0, matches = [];
+let matches = [];
+let currentIndex = 0;
+let originalNodes = [];
 
 function searchHighlight() {
   clearHighlights();
-  const searchText = document.getElementById("search-input").value.trim().toLowerCase();
-  if (!searchText) return;
+  const input = document.getElementById('search-input').value.trim().toLowerCase();
+  if (!input) return;
 
-  const bodyText = document.body.innerHTML;
-  const regex = new RegExp(`(${searchText})`, 'gi');
-  const markedText = bodyText.replace(regex, '<mark class="highlighted">$1</mark>');
-  document.body.innerHTML = markedText;
+  const walker = document.createTreeWalker(document.body, NodeFilter.SHOW_TEXT, null, false);
+  while (walker.nextNode()) {
+    const node = walker.currentNode;
+    if (node.parentNode && ['SCRIPT', 'STYLE'].includes(node.parentNode.tagName)) continue;
+    const text = node.textContent.toLowerCase();
+    const index = text.indexOf(input);
+    if (index !== -1) {
+      const span = document.createElement('span');
+      span.className = 'highlighted';
+      const before = node.textContent.slice(0, index);
+      const match = node.textContent.slice(index, index + input.length);
+      const after = node.textContent.slice(index + input.length);
+      span.textContent = match;
 
-  matches = Array.from(document.querySelectorAll("mark.highlighted"));
+      const frag = document.createDocumentFragment();
+      if (before) frag.appendChild(document.createTextNode(before));
+      frag.appendChild(span);
+      if (after) frag.appendChild(document.createTextNode(after));
+
+      originalNodes.push({ parent: node.parentNode, original: node });
+      node.parentNode.replaceChild(frag, node);
+      matches.push(span);
+    }
+  }
   updateResultCount();
-  if (matches.length > 0) scrollToMatch(0);
+  if (matches.length) highlightActive(0);
 }
 
-function scrollToMatch(index) {
-  if (matches.length === 0) return;
-  matches.forEach(el => el.style.background = "");
-  matches[index].style.background = "orange";
-  matches[index].scrollIntoView({ behavior: "smooth", block: "center" });
-  currentMatch = index;
+function clearHighlights() {
+  matches.forEach(span => {
+    const parent = span.parentNode;
+    if (!parent) return;
+    const text = parent.textContent;
+    parent.replaceWith(document.createTextNode(text));
+  });
+  originalNodes.forEach(({ parent, original }) => {
+    if (parent) {
+      const clone = original.cloneNode(true);
+      parent.innerHTML = parent.textContent;
+      parent.appendChild(clone);
+    }
+  });
+  matches = [];
+  originalNodes = [];
+  updateResultCount();
+}
+
+function highlightActive(index) {
+  matches.forEach(m => m.style.backgroundColor = 'yellow');
+  matches[index].scrollIntoView({ behavior: 'smooth', block: 'center' });
+  matches[index].style.backgroundColor = 'orange';
+  currentIndex = index;
   updateResultCount();
 }
 
 function nextMatch() {
-  if (matches.length === 0) return;
-  currentMatch = (currentMatch + 1) % matches.length;
-  scrollToMatch(currentMatch);
+  if (!matches.length) return;
+  currentIndex = (currentIndex + 1) % matches.length;
+  highlightActive(currentIndex);
 }
 
 function prevMatch() {
-  if (matches.length === 0) return;
-  currentMatch = (currentMatch - 1 + matches.length) % matches.length;
-  scrollToMatch(currentMatch);
-}
-
-function clearHighlights() {
-  const highlights = document.querySelectorAll("mark.highlighted");
-  highlights.forEach(el => {
-    const parent = el.parentNode;
-    parent.replaceChild(document.createTextNode(el.textContent), el);
-    parent.normalize();
-  });
-  matches = [];
-  updateResultCount();
+  if (!matches.length) return;
+  currentIndex = (currentIndex - 1 + matches.length) % matches.length;
+  highlightActive(currentIndex);
 }
 
 function updateResultCount() {
-  const el = document.getElementById("result-count");
-  el.textContent = matches.length > 0 ? `${currentMatch + 1}/${matches.length}` : "0/0";
+  const count = document.getElementById('result-count');
+  if (matches.length === 0) count.textContent = '0/0';
+  else count.textContent = `${currentIndex + 1}/${matches.length}`;
 }
 </script>
-
 
 
 
