--- a/index.html
+++ b/index.html
@@ -88,17 +88,18 @@ body {
       <button id="reset-all" style="padding:10px 18px; font-size:16px; border-radius:8px; background:#f39c12; color:white; border:none; font-weight:bold;">RESET ALL</button>
     </td>
    
-    <!-- WYSZUKIWARKA -->
+    <!-- 🔍 WYSZUKIWARKA -->
 <td style="width:60%; padding:6px; text-align:center; vertical-align:middle; border:1px solid #aebdc9;">
   <div id="search-box" style="display:flex; justify-content:center; align-items:center; gap:8px;">
-    <input id="search-input" type="text" placeholder="Szukaj..." style="flex:1; max-width:400px; padding:8px 12px; border:1px solid #ccc; border-radius:6px; font-size:15px;">
-    <button onclick="searchHighlight()">🔍</button>
-    <button onclick="prevMatch()">⬅️</button>
-    <button onclick="nextMatch()">➡️</button>
-    <span id="result-count" style="font-size:15px; min-width:40px; text-align:center;">0/0</span>
-    <button onclick="clearHighlights()" style="padding:6px 10px; font-weight:bold; color:white; background:#e74c3c; border:none; border-radius:6px;">X</button>
+    <input id="search-input" type="text" placeholder="Szukaj..." style="flex:1; max-width:500px; padding:8px 12px; border:1px solid #ccc; border-radius:6px; font-size:15px;">
+    <button onclick="highlightSearch()" style="padding:6px 10px;">🔍</button>
+    <button onclick="prevMatch()" style="padding:6px 10px;">⬅️</button>
+    <button onclick="nextMatch()" style="padding:6px 10px;">➡️</button>
+    <span id="search-count" style="font-size:15px; min-width:40px; text-align:center;">0/0</span>
+    <button onclick="clearSearch()" style="padding:6px 10px; font-weight:bold; color:white; background:#e74c3c; border:none; border-radius:6px;">X</button>
   </div>
 </td>
+
 
       
 
@@ -159,9 +160,12 @@ body {
 
 <br>
 &nbsp;
-
-  
- 
+<br>
+&nbsp;
+  <br>
+&nbsp;
+ <br>
+&nbsp;
 
   
 
@@ -4065,85 +4069,77 @@ function importDataByType(type, data) {
 
   
 <script>
-let highlights = [], current = 0;
+let matches = [], currentIndex = 0;
 
-function clearHighlights() {
-  highlights.forEach(({ span, text, parent }) => {
-    if (!span || !parent) return;
-    parent.replaceChild(document.createTextNode(text), span);
-  });
-  highlights = [];
-  updateCounter();
-}
+function highlightSearch() {
+  clearSearch();
+  const term = document.getElementById("search-input").value.trim();
+  if (!term) return updateCounter();
 
-function searchHighlight() {
-  clearHighlights();
-  const input = document.getElementById("search-input").value.trim().toLowerCase();
-  if (!input) return;
-
+  const regex = new RegExp(term, "gi");
   const walker = document.createTreeWalker(document.body, NodeFilter.SHOW_TEXT, null, false);
-  let node;
-  while ((node = walker.nextNode())) {
-    const parent = node.parentNode;
-    if (!parent || ['SCRIPT', 'STYLE'].includes(parent.tagName)) continue;
+  while (walker.nextNode()) {
+    const node = walker.currentNode;
+    const parent = node.parentElement;
+    if (!parent || parent.closest("#search-box") || parent.tagName === "SCRIPT" || parent.tagName === "STYLE") continue;
 
-    const text = node.nodeValue;
-    const lcText = text.toLowerCase();
-    let pos = 0;
-    while ((pos = lcText.indexOf(input, pos)) !== -1) {
-      const before = document.createTextNode(text.slice(0, pos));
-      const match = document.createTextNode(text.slice(pos, pos + input.length));
-      const after = document.createTextNode(text.slice(pos + input.length));
-
+    const frag = document.createDocumentFragment();
+    let lastIndex = 0;
+    node.nodeValue.replace(regex, (match, index) => {
+      if (index > lastIndex) frag.appendChild(document.createTextNode(node.nodeValue.slice(lastIndex, index)));
       const span = document.createElement("span");
-      span.className = "highlighted";
-      span.style.backgroundColor = "yellow";
-      span.appendChild(match);
+      span.textContent = match;
+      span.className = "highlighted-search";
+      frag.appendChild(span);
+      matches.push(span);
+      lastIndex = index + match.length;
+    });
+    if (lastIndex < node.nodeValue.length) frag.appendChild(document.createTextNode(node.nodeValue.slice(lastIndex)));
 
-      parent.insertBefore(before, node);
-      parent.insertBefore(span, node);
-      parent.insertBefore(after, node);
-      parent.removeChild(node);
-
-      highlights.push({ span, text: match.nodeValue, parent });
-      node = after;
-      pos = 0;
-    }
-  }
-
-  if (highlights.length > 0) {
-    current = 0;
-    updateHighlight();
+    if (matches.length) node.replaceWith(frag);
   }
   updateCounter();
+  scrollToCurrent();
 }
 
-function updateHighlight() {
-  highlights.forEach((el, i) => {
-    el.span.style.backgroundColor = (i === current) ? "orange" : "yellow";
-  });
-  highlights[current].span.scrollIntoView({ behavior: "smooth", block: "center" });
+function scrollToCurrent() {
+  if (matches.length === 0) return;
+  matches.forEach(el => el.style.backgroundColor = "");
+  matches[currentIndex].style.backgroundColor = "yellow";
+  matches[currentIndex].scrollIntoView({ behavior: "smooth", block: "center" });
 }
 
 function nextMatch() {
-  if (!highlights.length) return;
-  current = (current + 1) % highlights.length;
-  updateHighlight();
+  if (!matches.length) return;
+  currentIndex = (currentIndex + 1) % matches.length;
+  scrollToCurrent();
   updateCounter();
 }
 
 function prevMatch() {
-  if (!highlights.length) return;
-  current = (current - 1 + highlights.length) % highlights.length;
-  updateHighlight();
+  if (!matches.length) return;
+  currentIndex = (currentIndex - 1 + matches.length) % matches.length;
+  scrollToCurrent();
+  updateCounter();
+}
+
+function clearSearch() {
+  matches.forEach(el => {
+    const parent = el.parentNode;
+    parent.replaceChild(document.createTextNode(el.textContent), el);
+    parent.normalize();
+  });
+  matches = [];
+  currentIndex = 0;
   updateCounter();
 }
 
 function updateCounter() {
-  const el = document.getElementById("result-count");
-  el.textContent = highlights.length === 0 ? "0/0" : `${current + 1}/${highlights.length}`;
+  const display = document.getElementById("search-count");
+  display.textContent = matches.length ? `${currentIndex + 1}/${matches.length}` : "0/0";
 }
 </script>
+
 
 
 
